--- a/~/.vscode-root/User/History/-7d6276c9/8hTG.html
+++ b/~/.vscode-root/User/History/-7d6276c9/8hTG.html
@@ -9,13 +9,11 @@
 </head>
 <body>
 
-
-    <!-- <script>finalSolution();</script> -->
-    <!-- <script>myNumbers(10, 12);</script> -->
-
+    <script>myNnumbers(10, 12);</script>
 
    
-     <script>RickAshley();</script>  
+    <!-- <script>RickAshley();</script>  -->
+    <!--<button onclick="RickAshley()">Click Me!</button>-->
     
 </body>
 
