--- a/~/.vscode-root/User/History/-7d6276c9/hkXI.html
+++ b/~/.vscode-root/User/History/-7d6276c9/hkXI.html
@@ -10,12 +10,15 @@
 <body>
 
 
-    <!-- <script>finalSolution();</script> -->
-    <!-- <script>myNumbers(10, 12);</script> -->
+    <div id="result"></div>
+
+    
+    <script>myNumbers(10, 12);</script>
 
 
    
-     <script>RickAshley();</script>  
+    <!-- <script>RickAshley();</script>  -->
+    <!--<button onclick="RickAshley()">Click Me!</button>-->
     
 </body>
 
